# ros2_psd_pcb_reloc

./: .gitignore  README.md  source_run_robot0.sh  source_run_robot1.sh
global_yamls/: EuRoC.yaml  LSU_iCORE_MONO.yaml  LSU_iCORE_RGBD.yaml  LSU_iCORE_ZED.yaml  TUM2.yaml  dataset_db.yaml
shell_scripts/: ros2_config.sh
src/matimg_custom_msg_interface/: README.md  package.xml
src/matimg_custom_msg_interface/msg/: MatImg.msg
src/matimg_custom_msg_interface_2/: CMakeLists.txt
src/matimg_custom_msg_interface_2/msg/: EigenMsg.msg
src/orb_slam3_ros2/: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  package.xml
src/orb_slam3_ros2/include/orb_slam3_ros2/: vslam.hpp
src/orb_slam3_ros2/install/: local_setup.sh  setup.sh
src/orb_slam3_ros2/install/orb_slam3_ros2/share/orb_slam3_ros2/: package.zsh
src/orb_slam3_ros2/log/: latest_build
src/orb_slam3_ros2/orb_slam3/config/: LSU_iCORE_MONO.yaml
src/orb_slam3_ros2/orb_slam3/include/: FrameDrawer.h  G2oTypes.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  System.h  TwoViewReconstruction.h  Viewer.h
src/orb_slam3_ros2/orb_slam3/include/CameraModels/: GeometricCamera.h
src/orb_slam3_ros2/orb_slam3/install/: local_setup.sh  setup.sh
src/orb_slam3_ros2/orb_slam3/src/: Frame.cc  LoopClosing.cc  Map.cc  MapPoint.cc  Sim3Solver.cc  System.cc  Viewer.cc
src/orb_slam3_ros2/orb_slam3/src/CameraModels/: Pinhole.cpp
src/orb_slam3_ros2/src/: vslam.cpp
src/orb_slam3_ros3/: NSF24DEMO.md  PORT_TO_NOETIC.md
src/orb_slam3_ros3/include/orb_slam3_ros2/: vslam.hpp
src/orb_slam3_ros3/install/orb_slam3_ros2/share/orb_slam3_ros2/: package.bash
src/orb_slam3_ros3/orb_slam3/config/: LSU_iCORE_RGBD.yaml
src/orb_slam3_ros3/orb_slam3/include/: Alias.h  CommonStructs.h  Converter.h  Frame.h  KeyFrame.h  Settings.h  System.h  SystemUtils.h  Tracking.h
src/orb_slam3_ros3/orb_slam3/include/CameraModels/: Pinhole.h
src/orb_slam3_ros3/orb_slam3/log/: latest_build
src/orb_slam3_ros3/orb_slam3/src/: FrameDrawer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  MapDrawer.cc  ORBmatcher.cc  System.cc  SystemUtils.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/orb_slam3_ros3/src/: vslam_node.cpp
src/py_obj_detector_yolov5_ros2/: .gitignore  README.md  package.xml  pyproject.toml  setup.py
src/py_obj_detector_yolov5_ros2/py_obj_detector_yolov5_ros2/: .gitignore  agentobjectdetector.py  robot0_nn.py  robot1_nn.py
src/py_obj_detector_yolov5_ros2/py_obj_detector_yolov5_ros2/neural_net/: requirements.txt
src/py_obj_detector_yolov5_ros2/py_obj_detector_yolov5_ros2/neural_net/data/: custom_euroc_mh.yaml  custom_lsu_icore_mono.yaml  custom_tum_fr2_pioneer.yaml
src/py_obj_detector_yolov5_ros2/py_obj_detector_yolov5_ros2/neural_net/data/bck_yamls/: custom_lsu_icore.yaml
src/py_obj_detector_yolov5_ros2/py_obj_detector_yolov5_ros2/neural_net/utils/: augmentations.py  dataloaders.py  torch_utils.py  utils_2.py
src/py_obj_detector_yolov5_ros2/weights_configs/: .gitignore
src/py_obj_detector_yolov5_ros3/: setup.cfg
src/py_obj_detector_yolov5_ros3/py_obj_detector_yolov5_ros2/: agentobjectdetector.py  robot_combined_nn.py
src/py_obj_detector_yolov5_ros3/py_obj_detector_yolov5_ros2/neural_net/: neural_network.py
src/py_obj_detector_yolov5_ros3/py_obj_detector_yolov5_ros2/neural_net/data/: custom_euroc_vicon.yaml
src/py_obj_detector_yolov5_ros3/py_obj_detector_yolov5_ros2/neural_net/models/: common.py  experimental.py
src/py_obj_detector_yolov5_ros3/py_obj_detector_yolov5_ros2/neural_net/utils/: general.py  metrics.py  plots.py
src/py_obj_detector_yolov5_ros3/py_obj_detector_yolov5_ros2/submodules/: py_parameters.py  py_utils.py
